src/test/ui/issues/issue-77218.stderr
error[E0308]: mismatched types
  --> $DIR/issue-77218.rs:3:11
   |
LL |     while Some(0) = value.get(0) {
   |           ^^^^^^^^^^^^^^^^^^^^^^ expected `bool`, found `()`
   |
help: you might have meant to use pattern matching
   |
LL |     while let Some(0) = value.get(0) {
   |           ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
